--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "type": "java",
+            "name": "GameController",
+            "request": "launch",
+            "mainClass": "GameController",
+            "projectName": "ap4b-turing-machine-game_b0f56367"
+        },
         {
             "type": "java",
             "name": "Current File",
@@ -24,6 +30,7 @@
             "request": "launch",
             "mainClass": "Interface",
             "projectName": "ap4b-turing-machine-game_b0f56367",
-            "vmArgs": "--module-path /Users/zshelali/Documents/Developer/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml"        }
+            "vmArgs": "--module-path /Users/zshelali/Documents/Developer/javafx-sdk-23.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        }
     ]
 }
